# www.kaznak.work

./: .babelrc  .git_commit_template  .gitignore  .prettierignore  README.md  blitz.config.js  blog-kaznak-work.cabal  config.toml  next.config.js  package.json  pnpm-install.yaml  pnpm-lock.yaml  real-fabicon.json  site.hs  stack.yaml  tailwind.config.js
app/core/layouts/: Layout.tsx
app/core/lib/: constants.ts
app/pages/nobackends/random-pronounceable-string/: index.tsx
components/: mdx.tsx
components/head/: canonical.tsx  icons.tsx
content/posts/: 0000.memo.ja.md  0000.nextjs-todo.md  2016-06-08.emacs-memo.en.md  2016-06-08.haskell-stack-memo.en.md  2016-06-21.shellscript-template.en.md  2017-01-24.emacs-tips.ja.md  2021-03-16.setup-wireguard.md
data/menu/: extra.yml
lib/: const.ts  types.tsx
pages/: _app.tsx  _document.tsx  index.mdx  index.tsx
pages/posts/: 0000.memo.ja.mdx  0000.nextjs-todo.mdx  2016-06-08.emacs-memo.en.mdx  2016-06-08.haskell-stack-memo.en.mdx  2016-06-21.shellscript-template.en.mdx  2017-01-24.emacs-tips.ja.mdx  2021-03-16.setup-wireguard.mdx
site/: _redirects  index.md
site/css/: custom.css
site/posts/: index.md
site/posts/2016-06-08.emacs-memo/: index.md
site/posts/2016-06-08.haskell-stack-memo/: index.md
site/posts/2016-06-21.shellscript-template/: index.en.md
src/: site.hs
styles/: index.css
task/: deploy
templates/: default.html  post-list.md
