name:               blog-kaznak-work
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , time >= 1.8.0.2
                  , filepath >= 1.4
                  , binary
  ghc-options:      -threaded
  default-language: Haskell2010
